New Vercel Deployment plus Cors implementation to allow for error handling

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,10 +23,10 @@
     <p><strong>Publisher:</strong> <span id="publisher">Detecting...</span></p>
     <p><strong>Title:</strong> <span id="title">Detecting...</span></p>
     <p><strong>Topic:</strong> <span id="topic">Detecting...</span></p>
-    <p><strong>Bias:</strong> <span id="bias">Detecting... <small>(-2 to 2)</small></span></p>
+    <p><strong>Political Bias:</strong> <span id="bias">Detecting... <small>(-2[left], -1 [left-center], 0 [center], 1 [right-center], 2[right])</small></span></p>
     <p><strong>Reliability:</strong> <span id="reliability">Detecting... <small>(0 to 100)</small></span></p>
   </div>
-  <h3>Recommendation <small>(Article, Source, Bias, Reliability)</small></h3>
+  <h3>Related Articles <small>(Article, Source, Bias, Reliability)</small></h3>
   <p> </p>
   <div id="recommendations">
     <p id="rec1"><strong>#1 </strong> Detecting...</p>
